--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="workout_title">Title</string>
     <string name="textDescription">Description</string>
+    <string name="time">TIME</string>
+    <string name="reset">reset</string>
+    <string name="stop">stop</string>
+    <string name="start">start</string>
 </resources>
